--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -39,7 +39,7 @@
 		<hr class="hr">
 	
 		<h3><strong>Question 1</strong></h3>
-		<h4>You prefer to be in Mountains over the Ocean?</h4>
+		<h4>You prefer to be in Mountains over the Ocean.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q1">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -50,7 +50,7 @@
       	</select>
 
 		<h3><strong>Question 2</strong></h3>
-		<h4>You rather going hiking over swimming..</h4>
+		<h4>You rather going hiking over swimming.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q2">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -62,7 +62,7 @@
 
 
 		<h3><strong>Question 3</strong></h3>
-		<h4>You rather see a view of the mountains instead of the ocean</h4>
+		<h4>You rather see a view of the mountains instead of the ocean.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q3">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -74,7 +74,7 @@
 
 
 		<h3><strong>Question 4</strong></h3>
-		<h4>You want to see wildlife like bears and wolves</h4>
+		<h4>You want to see wildlife like bears and wolves.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q4">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -86,7 +86,7 @@
 
 
 		<h3><strong>Question 5</strong></h3>
-		<h4>You like intense hiking</h4>
+		<h4>You like intense hiking.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q5">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -100,7 +100,7 @@
 		<br>
 
 		<h3><strong>Question 6</strong></h3>
-		<h4>You like hiking through a forest</h4>
+		<h4>You like hiking through a forest.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q6">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -112,7 +112,7 @@
 
 
 		<h3><strong>Question 7</strong></h3>
-		<h4>You are physically able to handle changes in elevation</h4>
+		<h4>You are physically able to handle changes in elevation.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q7">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -123,7 +123,7 @@
       	</select>
 
 		<h3><strong>Question 8</strong></h3>
-		<h4>You aren't a fan of sealife</h4>
+		<h4>You aren't a fan of sealife.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q8">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -134,7 +134,7 @@
       	</select>
 
 		<h3><strong>Question 9</strong></h3>
-		<h4>You aren't a fan of the water</h4>
+		<h4>You aren't a fan of the water.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q9">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -145,7 +145,7 @@
       	</select>
 
 		<h3><strong>Question 10</strong></h3>
-		<h4>You are scared of snorkeling</h4>
+		<h4>You are scared of snorkeling.</h4>
 	 	<select data-placeholder="" class="chosen-select" id="q10">
 	 		<option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
